# beginner-fashion-mnist-competition

./: main_study.py  pyproject.toml  sample_weight.pkl
docs/: network_summary.md
src/: load_fashion_mnist.py  network.py  submit.py  train.py
